# qtex

./: Box.h  CMakeLists.txt  main.cpp  matrx.cpp  matrx.h  mtl.cpp  mtl.h  myApp.cpp  myApp.h  myTimer.h  shape3d.cpp  shape3d.h  test.cpp
